# image-metadata-extractor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAYWRIGHT_IMPLEMENTATION.md  README.md  ROADMAP.md  TODO_web_APIs.md  deny.toml  index.html  package-lock.json  package.json  playwright.config.ts  robots.txt  sitemap.xml  vercel.json
.cargo/: audit.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e.yml  quality.yml
prompts/: add_playwright_tests.md  continue_on_roadmap.md  improve_test_coverage.md  optimize_web_apis.md
scripts/: README.md  install-chrome-apt.sh  install-chrome-ubuntu.sh  manual-chromedriver-install.sh  vercel-build.sh
src/: app.rs  archive.rs  binary_cleaner.rs  exif.rs  exif_core.rs  exif_wasm.rs  export.rs  gps_privacy.rs  image_cleaner.rs  lib.rs  metadata_info.rs  preferences.rs  types.rs  utils.rs  utils_core.rs  utils_hash.rs  utils_wasm.rs
src/components/: archive_import.rs  batch_cleaner.rs  batch_manager.rs  command_palette.rs  duplicate_detector.rs  file_upload.rs  image_cleaner.rs  image_display.rs  metadata_display.rs  metadata_export.rs  mod.rs  privacy_risk.rs
tests/: archive_tests.rs  binary_cleaner_tests.rs  component_logic_tests.rs  component_tests.rs  exif_core_final_coverage_tests.rs  exif_core_regression_tests.rs  exif_coverage_tests.rs  exif_regression_tests.rs  exif_tests.rs  export_batch_tests.rs  export_formats_tests.rs  export_tests.rs  file_upload_tests.rs  gps_edge_cases.rs  gps_privacy_tests.rs  image_cleaner_tests.rs  info_tests.rs  metadata_info_tests.rs  preferences_tests.rs  privacy_risk_tests.rs  types_tests.rs  utils_core_tests.rs  utils_tests.rs
tests/e2e/: README.md  batch-downloads.spec.ts  batch.spec.ts  cleaning-safety.spec.ts  cleaning.spec.ts  export.spec.ts  helpers.ts  metadata.spec.ts  mobile.spec.ts  upload.spec.ts
tests/e2e/fixtures/: README.md  block-analytics.ts  generate_fixtures.py  simple.jpg.b64
tests/wasm/: app_tests.rs  component_tests.rs  integration_tests.rs  node_tests.rs
tests/wasm/components/: batch_manager_tests.rs  file_upload_tests.rs
