[package]
name = "image-metadata-extractor"
version = "0.1.0"
edition = "2024"
description = "A comprehensive browser-based image metadata extraction tool built entirely in Rust using Yew framework"
license = "MIT"
repository = "https://github.com/username/image-metadata"
homepage = "https://github.com/username/image-metadata"
documentation = "https://github.com/username/image-metadata/blob/main/README.md"
keywords = ["exif", "metadata", "image", "wasm", "yew"]
categories = ["multimedia::images", "web-programming", "wasm"]
authors = ["Image Metadata Extractor Contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlAnchorElement", "HtmlElement", "Element", "CssStyleDeclaration", "Blob", "BlobPropertyBag", "Url", "Document", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
kamadak-exif = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-file = "0.3"
