[package]
name = "image-metadata-extractor"
version = "0.1.0"
edition = "2024"
description = "A comprehensive browser-based image metadata extraction tool built entirely in Rust using Yew framework"
license = "MIT"
repository = "https://github.com/akofink/image-metadata-extractor"
homepage = "https://github.com/akofink/image-metadata-extractor"
documentation = "https://github.com/akofink/image-metadata-extractor/blob/main/README.md"
keywords = ["exif", "metadata", "image", "wasm", "yew"]
categories = ["multimedia::images", "web-programming", "wasm"]
authors = ["Image Metadata Extractor Contributors"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "HtmlAnchorElement", "HtmlElement", "Element", "CssStyleDeclaration",
    "Blob", "BlobPropertyBag", "Url", "Document", "Window", "Storage",
    "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement",
    "HtmlSelectElement", "InputEvent", "Navigator", "Clipboard",
    "MediaQueryList", "MediaQueryListEvent", "Crypto", "SubtleCrypto"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
kamadak-exif = "0.5"
little_exif = "0.6"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-file = "0.3"
gloo = { version = "0.10", features = ["events"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo = { version = "0.10", features = ["futures", "utils", "timers"] }

# Test configurations
[[test]]
name = "wasm_component_tests"
path = "tests/wasm/component_tests.rs"

[[test]]
name = "wasm_file_upload_tests"
path = "tests/wasm/components/file_upload_tests.rs"

[[test]]
name = "wasm_integration_tests"
path = "tests/wasm/integration_tests.rs"

[[test]]
name = "app_tests"
path = "tests/wasm/app_tests.rs"

[[test]]
name = "wasm_batch_manager_tests"
path = "tests/wasm/components/batch_manager_tests.rs"

# Only include cargo-llvm-cov for non-WASM targets (Unix/Linux systems)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cargo-llvm-cov = "0.6"
